Dodano ikonkę ognia i Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!-- WERYFIKACJA GOOGLE -->
 <meta name="google-site-verification" content="Jf8EvA_vGXJ945u0R5NeVkI6CGhbqjVRHEYR6hgd6hw" />  
   <!-- PODSTAWOWE SEO -->
-  <title>Slang Test 2024 - Sprawdź czy jesteś młodzieżowy! | Quiz slang</title>
+  <title>Slang Test 2025 - Sprawdź czy jesteś młodzieżowy! | Quiz slang</title>
   <meta name="description" content="Test znajomości slangu młodzieżowego z 20 pytaniami. Sprawdź czy znasz: GYATT, SIGMA, OHIO, NPC, SLAY i inne popularne słowa Gen Z!">
   <meta name="keywords" content="slang test, slang młodzieżowy, gyatt co to znaczy, sigma slang, ohio meme, npc znaczenie, slay po polsku, quiz slang, test młodzieżowy 2024">
   <meta name="author" content="Slang Test">
@@ -17,7 +17,7 @@
   <meta name="robots" content="index, follow">
   
   <!-- OPEN GRAPH (Facebook, Discord, itp.) -->
-  <meta property="og:title" content="Slang Test 2024 - Sprawdź czy jesteś młodzieżowy!">
+  <meta property="og:title" content="Slang Test 2025 - Sprawdź czy jesteś młodzieżowy!">
   <meta property="og:description" content="20 pytań które sprawdzą twoją znajomość slangu młodzieżowego. Czy wiesz co to GYATT, SIGMA czy NPC?">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://slang-test.netlify.app/">
@@ -35,7 +35,7 @@
   <link rel="canonical" href="https://slang-test.netlify.app/">
   
   <!-- FAVICON -->
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🔥</text></svg>">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   
   <!-- DODATKOWE -->
@@ -134,7 +134,7 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-TWÓJ-ID');
+    gtag('config', 'G-74M19YHZNC');
   </script>
 </head>
 <body>
